@@ -928,6 +928,13 @@ BOOLEAN PhUiSetIoPriorityProcess(
     );
 
 PHAPPAPI
+BOOLEAN PhUiSetPagePriorityProcess(
+    __in HWND hWnd,
+    __in PPH_PROCESS_ITEM Process,
+    __in ULONG PagePriority
+    );
+
+PHAPPAPI
 BOOLEAN PhUiSetPriorityProcess(
     __in HWND hWnd,
     __in PPH_PROCESS_ITEM Process,
@@ -1024,6 +1031,13 @@ BOOLEAN PhUiSetIoPriorityThread(
     __in HWND hWnd,
     __in PPH_THREAD_ITEM Thread,
     __in ULONG IoPriority
+    );
+
+PHAPPAPI
+BOOLEAN PhUiSetPagePriorityThread(
+    __in HWND hWnd,
+    __in PPH_THREAD_ITEM Thread,
+    __in ULONG PagePriority
     );
 
 PHAPPAPI
