@@ -4,6 +4,7 @@ Process Hacker
  * NEW/IMPROVED:
    * Updated ExtendedServices plugin
    * Updated WindowExplorer plugin
+   * Added support for setting Page Priority
    * Improved Run As mechanism
  * FIXED:
    * Handle leak
